# rocket-app

./: Cargo.toml  application.toml  application.yml  readme.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.http/: auth_controller.http  http-client.private.env.json  user_controller.http
resource/: application.yml
resource/pem/: private.pem  public.pem
resource/sql/html/: user.html
resource/ui/: index.html
sql/html/: dict.html
src/: actions.rs  config.rs  dto.rs  error.rs  lib.rs  main.rs  models.rs  response.rs  schema.rs
src/common/: enums.rs  mod.rs
src/common/constants/: http_code.rs  mod.rs
src/common/enums/: error.rs  mod.rs
src/common/plugins/: logic_del_plugin.rs  mod.rs  postgres_page_plugin.rs  returning_id_plugin.rs
src/common/utils/: address_util.rs  jwt.rs  jwt_util.rs  mod.rs  password_util.rs  resource.rs  resource_util.rs
src/config/: config.rs  db.rs  dict.rs  log.rs  mod.rs  redis.rs
src/controller/: auth_controller.rs  demo_controller.rs  index_controller.rs  mod.rs  test_controller.rs  user_controller.rs
src/domain/: mod.rs
src/domain/intercept/: logic_del_intercept.rs  mod.rs
src/domain/plugins/: logic_del_plugin.rs  postgres_page_plugin.rs  returning_id_plugin.rs
src/domain/table/: common_table.rs  dict.rs  dict_detail.rs  menu.rs  mod.rs  role.rs  role_menu.rs  table_init.rs  tables.rs  user.rs  user_role.rs
src/mapper/: dict_mapper.rs  mod.rs  user_mapper.rs
src/security/: mod.rs
src/service/: auth_service.rs  mod.rs  user_service.rs
tests/: address_test.rs  config_test.rs  tests.rs
(+16 files in other folders)
