[package]
name = "platform-app"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yml = "0.0.12"
futures = "0.3.30"
chrono="0.4.38"
#rbatis deps
rbs = { version = "4.5.18"}
rbatis = { version = "4.5.29"}
rbdc-pg={version="4.5.12"}
#log
log = "0.4.22"
fast_log = "1.7.3"

    