[package]
name = "rust-platform"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0"}
serde = { version = "1.0.210", features = ["derive"] }
#serde_with = "3.9.0"
#serde_qs= { version = "0.13.0",features = ["actix4"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
futures = "0.3.30"
chrono="0.4.38"
#rbatis deps
rbs = { version = "4.5.18"}
rbatis = { version = "4.5.30",features=["debug_mode"]}
rbdc-pg="4.5.13"
#log
log = "0.4.22"
fast_log ={version= "1.7.4",features = ["lz4", "zip", "gzip"]}

validator = { version = "0.18.1", features = ["derive"] }
failure = "0.1.8"

regex = "1.10.6"

rust-embed="8.5.0"
mime_guess = "2.0.5"

jsonwebtoken = "9.3.0"